# byte-sequence

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs
