[package]
name = "byte-sequence"
version = "0.2.1"
authors = ["Jakob Demler <jdemler@curry-software.com>"]
description = "A little marco that creates structs to be used as byte sequences (for ApiKeys, SessionIds and so on)"
repository = "https://github.com/CurrySoftware/byte-sequence"
readme = "README.md"
license = "MIT/BSD-3-Clause"

[dependencies]
rand = "0.5"
serde = "1.0"
failure = "0.1"